--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "host": "npm run dev -- --host",
     "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./src/style.css --watch",
+    "tailwind-build": "npx tailwindcss -i ./src/tailwind.css -o ./src/style.css --minify",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
